# StrahCalc

./: .directory  .gitignore  CMakeLists.txt  LICENSE  README.md  StrahCalc.pro  TinyTex.pro
doc/: Poročilo.aux  Poročilo.bbl  Poročilo.bcf  Poročilo.blg  Poročilo.lof  Poročilo.run.xml  Poročilo.tex  Poročilo.tex.recover.bak~  Poročilo.toc  bibliography.bib  bibliography.bib.blg  documentation.tex  exptr.tex  vegovatitle.sty
functions/: functions
functions/stl/: math
include/gmp/lib/: libgmp.so.10.3.2
include/klfbackend/: KLFBackend.pri  KLFBackend.pro  KLFBackendHeaders.pri  KLFBackendIncl.pro
include/qexprtkbackend/: QExprtkBackend.pri  exprtk_float128_adaptor.hpp  exprtk_gmp_adaptor.hpp  exprtk_gmp_addaptor.hpp  qexprtkbackend.cpp  qexprtkbackend.h
include/qtranslator/: QTranslator.pri  QTranslator.pro  QTranslatorSources.pri  qtranslator.h
lang/: en-GB.json  functions  ja-JP.json  lang.pri  sl-SI.json
lib/klfbackend/: KLFBackend.pri
src/: MufLatex.pri  StrahCalc.pri  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mufexprparser.cpp  mufexprparser.h  muffunctions.cpp  muffunctions.h  muflatex.cpp  muflatex.h  mufmenu.cpp  mufmenu.h  mufsettings_w.cpp  mufsettings_w.h  mufsettings_w.ui  mufsymbollistview_w.cpp  mufsymbollistview_w.h  mufsymbollistview_w.ui  mufsymbols.cpp  mufsymbols.h  settings_w.cpp  settings_w.ui  stable.h  strahcalc.cpp  strahcalc.h  strahcalc.ui  strahcalcinit.cpp  symbollistview_w.cpp  symbollistview_w.h  symbollistview_w.ui  variablelistview.cpp  variablelistview.h
src/qexprtkbackend/: QExprtkBackend.pri  QExprtkBackend.pro  QExprtkBackendHeaders.pri  QExprtkBackendSources.pri  qexprtkbackend.cpp  qexprtkbackend.h
src/qtranslator/: QTranslator.pri  QTranslatorHeaders.pri  qtranslator.cpp  qtranslator.h
